--- a/style1.css
+++ b/style1.css
@@ -174,6 +174,7 @@ div {
     color: white;
     padding: 7px;
     border-radius: 15px;
+    box-shadow: 0 10px 15px rgb(102, 102, 102);
 }
 
 #skillsList {
