--- a/style1.css
+++ b/style1.css
@@ -81,7 +81,7 @@ h2 {
 }
 
 #objective p {
-    font-size: 16px;
+    font-size: 18px;
     width: auto; 
     margin-left: 30px; 
 }
@@ -166,7 +166,7 @@ div {
 
 /* Skills */
 .skills_section {
-    margin: 30px 30px 50px 160px;
+    margin: 30px 30px 50px 80px;
 }
 
 .skills_section button {
@@ -178,8 +178,9 @@ div {
 }
 
 #skillsList {
-    color: blue;
+    color: rgb(29, 29, 30);
     padding-top: 20px;
+    font-size: 18px;
 }
 
 li::first-letter {
@@ -249,7 +250,7 @@ li::first-letter {
     background-size: cover;
     border-radius: 15px;
     color: rgb(9, 9, 9);
-    height: 380px auto;
+    height: 650px auto;
     padding-bottom: 5px;
     box-shadow: 0 10px 15px rgb(102, 102, 102);
     /* margin-top: 40px; */
@@ -266,16 +267,16 @@ li::first-letter {
     height: auto;
     background-color: rgba(32, 32, 130, 0.326);
     padding: 30px;
-    
+    font-size: 18px;
     border-radius: 15px;
     color: rgb(247, 249, 248);
     transition: all 1.5s;
 }
 .education-card:hover {
     transform: translateY(5%);
-    font-size: 17.5px;
-    width: 80%;
-    margin-top: 15px;
+    font-size: 18.5px;
+    width: 100%;
+    margin-top: 20px;
 }
 
 .education-card h3 {
