--- a/style1.css
+++ b/style1.css
@@ -264,9 +264,9 @@ li::first-letter {
 
 .education-card {
     width: 89%;
-    height: 250px;
+    height: 270px;
     background-color: rgba(32, 32, 130, 0.326);
-    padding: 20px;
+    padding: 30px 40px 50px 40px;
     font-size: 18px;
     border-radius: 15px;
     color: rgb(247, 249, 248);
@@ -276,7 +276,8 @@ li::first-letter {
     transform: translateY(40%);
     font-size: 19px;
     width: 90%;
-    margin-top: 20px;
+    height: auto;
+    margin-top: 30px;
     color: rgb(237, 174, 49);
     font-weight: bolder;
 }
