--- a/style1.css
+++ b/style1.css
@@ -29,7 +29,7 @@ nav {
     font-style: normal;
     /* Adjust padding for smaller screens */
     padding: 10px;
-    
+
 }
 
 .profile_name hr {
@@ -47,6 +47,7 @@ nav {
 
 .contact_info {
     font-size: 14px;
+    word-wrap: break-word;
 }
 
 
@@ -67,7 +68,7 @@ nav {
     font-size: 14px;
     padding: 10px;
     margin-left: auto;
-
+    word-wrap: break-word;
 }
 
 .hamlabel {
