--- a/style.css
+++ b/style.css
@@ -217,6 +217,23 @@ hr {
     opacity: 1;
 }
 
+/* Achievements */
+.achievements {
+    width: auto;
+    /* box-shadow: 0 10px 15px rgb(102, 102, 102);
+    background-color: rgb(243, 240, 240); */
+    font-weight: normal;
+    font-size: 18px;
+    padding: 30px;
+    padding-bottom: 35px;
+    /* width: 13in; */
+    /* border-radius: 15px; */
+    display: block;
+    margin-right: 50px;
+    /* margin-top: 50px; */
+    margin-left: 80px;
+}
+
 /* Skills */
 .skills_section {
     margin: 30px 30px 0px 80px;
