--- a/style.css
+++ b/style.css
@@ -90,12 +90,13 @@ nav {
     /* Hide the checkbox */
 }
 
-/* Display the menu items by default */
 #hamitems {
-    display: inline-flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    /* Hide the menu items initially */
+    display: none;
+    /* Position it below the hamburger */
+    /* top: 100%;  */
     background-color: #5b038e;
+    /* Match the background color of nav */
     width: 100%;
     max-width: 100%;
     height: auto;
@@ -115,13 +116,18 @@ nav {
     text-decoration: underline;
 }
 
-/* Enlarging the hamburger menu */
+/* Show menu items when checkbox is checked: display row */
+#hamburger:checked~#hamitems {
+    display: inline-flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+/* enlarging the hamburger manu! */
 label[for="hamburger"] {
     /* Replace XX with your desired size */
     font-size: 1.428572em;
 }
-
-
 
 /* Titles */
 h2 {
