--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav {
 }
 
 .contact_info {
-    font-size: 14px;
+    font-size: 1em;
     word-wrap: break-word;
     display: flex;
     align-items: center;
